--- a/app/views/operations/index.html.erb
+++ b/app/views/operations/index.html.erb
@@ -1,12 +1,11 @@
 <h1>Listing operations</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Person</th>
       <th>Amount</th>
       <th>Description</th>
-      <th>Solved</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -17,7 +16,6 @@
         <td><%= operation.person %></td>
         <td><%= operation.amount %></td>
         <td><%= operation.description %></td>
-        <td><%= operation.solved %></td>
         <td><%= link_to 'Show', operation %></td>
         <td><%= link_to 'Edit', edit_operation_path(operation) %></td>
         <td><%= link_to 'Destroy', operation, method: :delete, data: { confirm: 'Are you sure?' } %></td>
